@@ -10,7 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 public class FormattedConfiguration implements IFormattedConfiguration {
 
@@ -22,12 +22,12 @@ public class FormattedConfiguration implements IFormattedConfiguration {
 
     @Override
     public String getString(String path, Object o) {
-        return StringUtils.replaceOnce(config.getString(path), "{}", o.toString());
+        return rethrowIfNeeded(() -> StringUtils.replaceOnce(config.getString(path), "{}", o.toString()));
     }
 
     @Override
     public String getString(String path, Object... args) {
-        return replace(config.getString(path), args);
+        return rethrowIfNeeded(() -> replace(config.getString(path), args));
     }
 
     @Override
@@ -77,12 +77,12 @@ public class FormattedConfiguration implements IFormattedConfiguration {
 
     @Override
     public boolean hasPath(String path) {
-        return config.hasPath(path);
+        return rethrowIfNeeded(() -> config.hasPath(path));
     }
 
     @Override
     public boolean hasPathOrNull(String path) {
-        return config.hasPathOrNull(path);
+        return rethrowIfNeeded(() -> config.hasPathOrNull(path));
     }
 
     @Override
@@ -97,191 +97,194 @@ public class FormattedConfiguration implements IFormattedConfiguration {
 
     @Override
     public boolean getIsNull(String path) {
-        return config.getIsNull(path);
+        return rethrowIfNeeded(() -> config.getIsNull(path));
     }
 
     @Override
     public boolean getBoolean(String path) {
-        return config.getBoolean(path);
+        return rethrowIfNeeded(() -> config.getBoolean(path));
     }
 
     @Override
     public Number getNumber(String path) {
-        return config.getNumber(path);
+        return rethrowIfNeeded(() -> config.getNumber(path));
     }
 
     @Override
     public int getInt(String path) {
-        return config.getInt(path);
+        return rethrowIfNeeded(() -> config.getInt(path));
     }
 
     @Override
     public long getLong(String path) {
-        return config.getLong(path);
+        return rethrowIfNeeded(() -> config.getLong(path));
     }
 
     @Override
     public double getDouble(String path) {
-        return config.getDouble(path);
+        return rethrowIfNeeded(() -> config.getDouble(path));
     }
 
     @Override
     public String getString(String path) {
-        return config.getString(path);
+        return rethrowIfNeeded(() -> config.getString(path));
     }
 
     @Override
     public <T extends Enum<T>> T getEnum(Class<T> enumClass, String path) {
-        return config.getEnum(enumClass, path);
+        return rethrowIfNeeded(() -> config.getEnum(enumClass, path));
     }
 
     @Override
     public ConfigObject getObject(String path) {
-        return config.getObject(path);
+        return rethrowIfNeeded(() -> config.getObject(path));
     }
 
     @Override
     public IFormattedConfiguration getConfig(String path) {
-        return new FormattedConfiguration(config.getConfig(path));
+        return new FormattedConfiguration(rethrowIfNeeded(() -> config.getConfig(path)));
     }
 
     @Override
     public Object getAnyRef(String path) {
-        return config.getAnyRef(path);
+        return rethrowIfNeeded(() -> config.getAnyRef(path));
     }
 
     @Override
     public ConfigValue getValue(String path) {
-        return config.getValue(path);
+        return rethrowIfNeeded(() -> config.getValue(path));
     }
 
     @Override
     public Long getBytes(String path) {
-        return config.getBytes(path);
+        return rethrowIfNeeded(() -> config.getBytes(path));
     }
 
     @Override
     public ConfigMemorySize getMemorySize(String path) {
-        return config.getMemorySize(path);
+        return rethrowIfNeeded(() -> config.getMemorySize(path));
     }
 
     @Override
     @Deprecated
     public Long getMilliseconds(String path) {
-        return config.getMilliseconds(path);
+        return rethrowIfNeeded(() -> config.getMilliseconds(path));
     }
 
     @Override
     @Deprecated
     public Long getNanoseconds(String path) {
-        return config.getNanoseconds(path);
+        return rethrowIfNeeded(() -> config.getNanoseconds(path));
     }
 
     @Override
     public long getDuration(String path, TimeUnit unit) {
-        return config.getDuration(path, unit);
+        return rethrowIfNeeded(() -> config.getDuration(path, unit));
     }
 
     @Override
     public Duration getDuration(String path) {
-        return config.getDuration(path);
+        return rethrowIfNeeded(() -> config.getDuration(path));
     }
 
     @Override
     public Period getPeriod(String path) {
-        return config.getPeriod(path);
+        return rethrowIfNeeded(() -> config.getPeriod(path));
     }
 
     @Override
     public TemporalAmount getTemporal(String path) {
-        return config.getTemporal(path);
+        return rethrowIfNeeded(() -> config.getTemporal(path));
     }
 
     @Override
     public ConfigList getList(String path) {
-        return config.getList(path);
+        return rethrowIfNeeded(() -> config.getList(path));
     }
 
     @Override
     public List<Boolean> getBooleanList(String path) {
-        return config.getBooleanList(path);
+        return rethrowIfNeeded(() -> config.getBooleanList(path));
     }
 
     @Override
     public List<Number> getNumberList(String path) {
-        return config.getNumberList(path);
+        return rethrowIfNeeded(() -> config.getNumberList(path));
     }
 
     @Override
     public List<Integer> getIntList(String path) {
-        return config.getIntList(path);
+        return rethrowIfNeeded(() -> config.getIntList(path));
     }
 
     @Override
     public List<Long> getLongList(String path) {
-        return config.getLongList(path);
+        return rethrowIfNeeded(() -> config.getLongList(path));
     }
 
     @Override
     public List<Double> getDoubleList(String path) {
-        return config.getDoubleList(path);
+        return rethrowIfNeeded(() -> config.getDoubleList(path));
     }
 
     @Override
     public List<String> getStringList(String path) {
-        return config.getStringList(path);
+        return rethrowIfNeeded(() -> config.getStringList(path));
     }
 
     @Override
     public <T extends Enum<T>> List<T> getEnumList(Class<T> enumClass, String path) {
-        return config.getEnumList(enumClass, path);
+        return rethrowIfNeeded(() -> config.getEnumList(enumClass, path));
     }
 
     @Override
     public List<? extends ConfigObject> getObjectList(String path) {
-        return config.getObjectList(path);
+        return rethrowIfNeeded(() -> config.getObjectList(path));
     }
 
     @Override
     public List<? extends IFormattedConfiguration> getConfigList(String path) {
-        return config.getConfigList(path).stream().map(FormattedConfiguration::new).collect(Collectors.toList());
+        return rethrowIfNeeded(() -> config.getConfigList(path))
+                .stream()
+                .map(FormattedConfiguration::new)
+                .toList();
     }
 
     @Override
     public List<? extends Object> getAnyRefList(String path) {
-        return config.getAnyRefList(path);
+        return rethrowIfNeeded(() -> config.getAnyRefList(path));
     }
 
     @Override
     public List<Long> getBytesList(String path) {
-        return config.getBytesList(path);
+        return rethrowIfNeeded(() -> config.getBytesList(path));
     }
 
     @Override
     public List<ConfigMemorySize> getMemorySizeList(String path) {
-        return config.getMemorySizeList(path);
+        return rethrowIfNeeded(() -> config.getMemorySizeList(path));
     }
 
     @Override
     @Deprecated
     public List<Long> getMillisecondsList(String path) {
-        return config.getMillisecondsList(path);
+        return rethrowIfNeeded(() -> config.getMillisecondsList(path));
     }
 
     @Override
     @Deprecated
     public List<Long> getNanosecondsList(String path) {
-        return config.getNanosecondsList(path);
+        return rethrowIfNeeded(() -> config.getNanosecondsList(path));
     }
 
     @Override
     public List<Long> getDurationList(String path, TimeUnit unit) {
-        return config.getDurationList(path, unit);
+        return rethrowIfNeeded(() -> config.getDurationList(path, unit));
     }
 
     @Override
     public List<Duration> getDurationList(String path) {
-        return config.getDurationList(path);
+        return rethrowIfNeeded(() -> config.getDurationList(path));
     }
 
     @Override
@@ -307,6 +310,18 @@ public class FormattedConfiguration implements IFormattedConfiguration {
     @Override
     public IFormattedConfiguration withValue(String path, ConfigValue value) {
         return new FormattedConfiguration(config.withValue(path, value));
+    }
+
+    private <T> T rethrowIfNeeded(Supplier<T> action) {
+        try {
+            return action.get();
+        } catch (ConfigException.BadPath e) {
+            throw new UnresolvablePathException(e.getMessage());
+        } catch (ConfigException.WrongType e) {
+            throw new ClassCastException(e.getMessage());
+        } catch (ConfigException.Missing e) {
+            throw new MissingValueException(e.getMessage());
+        }
     }
 
     private String replace(String msg, Object... args) {
